# scrapy-extension

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STABILITY.md  conftest.py  pyproject.toml  pyrightconfig.json
.github/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  STABILITY.md  dependabot.yml
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: complete-examples.md  fix-review-issues.md
aaa/: __init__.py
docs/: CLAUDE.md  backend-plugins.md  code-review-2026-06-15.md  codebase-deep-insight.md  migration-guide.md  runbook.md
docs/decisions/: 0001-multi-backend-architecture.md
docs/insight/: DEEP-INSIGHT-2026-07-09-parallel-verified.md  DEEP-INSIGHT-2026-07-10-parallel-verified.md  EXECUTION-INDEX.md  INSIGHT.md  INSIGHTS-2026-06-25.md  ITERATIVE-HARDENING-2026-07-21.md  PLAN-2026-06-25.md  PLAN-2026-07-23-post-hardening-frontier.md  PLAN-round14-six-dimension-hardening.md  PLAN-round16-post-r15-rescan.md  PLAN-round17-baseexception-cleanup.md  PLAN-round18-parity-tocou.md  PLAN-round19-es-leak-hoist.md  PLAN-round20-healthprobe-close.md  PLAN-round21-validation-monitor.md  PLAN-round3-sqs-pulsar-real-ack.md  PLAN-round4-backpressure.md  PLAN-round5-entry-points.md  PLAN-round6-security-parity.md  PLAN-round7-recursive-cleanup.md  PLAN-round8-forward.md  PLAN.md  SPEC-2026-06-25.md  SPEC-2026-07-23-post-hardening-frontier.md  SPEC-round14-six-dimension-hardening.md  SPEC-round16-post-r15-rescan.md  SPEC-round17-baseexception-cleanup.md  SPEC-round18-parity-tocou.md  SPEC-round19-es-leak-hoist.md  SPEC-round20-healthprobe-close.md  SPEC-round21-validation-monitor.md  SPEC-round8-settings-validation.md  SPEC-round8-testing.md  SPEC-round8-tier1.md  SPEC-round8-v1readiness.md  SPEC.md  TASK-round16-post-r15-rescan.md  TASK-round17-baseexception-cleanup.md  TASK-round18-parity-tocou.md  TASK-round19-es-leak-hoist.md  (+2 more)
docs/superpowers/plans/: 2025-03-18-multi-backend-scrapy-extension.md  2026-03-18-multi-backend-implementation.md  2026-04-18-rocketmq-backend.md
docs/superpowers/specs/: 2025-03-18-multi-backend-scrapy-extension-design.md  2026-03-18-multi-backend-implementation-design.md
examples/: README.md  redis_spider.py
examples/examples/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
examples/examples/spiders/: __init__.py  quotes.py  quotes_connection_manager.py  quotes_crawl.py  quotes_elasticsearch.py  quotes_kafka.py  quotes_mongodb.py  quotes_multi_mode.py  quotes_programmatic.py  quotes_rabbitmq.py  quotes_redis.py
src/scrapy_extension/: __init__.py  exceptions.py  spider_mixin.py
src/scrapy_extension/backends/: __init__.py  _optional.py  _redaction.py  _retry.py  base.py  circuit_breaker.py  connectors.py  dynamodb.py  elasticsearch.py  kafka.py  kafka_backend.py  memcached.py  mongodb.py  mongodb_backend.py  pulsar.py  rabbitmq.py  rabbitmq_backend.py  redis.py  redis_backend.py  registry.py  rocketmq.py  sqs.py
src/scrapy_extension/components/: __init__.py  dupefilter.py  pipeline.py  queue.py  scheduler.py
src/scrapy_extension/config/: __init__.py  settings.py
src/scrapy_extension/connection/: __init__.py  manager.py
src/scrapy_extension/dupefilter/: __init__.py  dupefilter.py
src/scrapy_extension/dupefilter/filters/: __init__.py  base.py  bloom_filter.py  cuckoo_filter.py  factory.py  memory_filter.py  set_filter.py
src/scrapy_extension/exceptions/: __init__.py  base.py
src/scrapy_extension/monitor/: __init__.py  base.py  stats.py
src/scrapy_extension/pipeline/: pipeline.py
src/scrapy_extension/queue/: __init__.py  base.py  queue.py
src/scrapy_extension/queue/strategies/: __init__.py  _names.py  base.py  delay.py  factory.py  passthrough.py  priority.py  ring_buffer.py  round_robin.py  throttle.py  time_wheel.py  work_stealing.py
src/scrapy_extension/schedule/: __init__.py  scheduler.py
src/scrapy_extension/settings/: __init__.py  _aws.py  base.py  dynamodb.py  elasticsearch.py  kafka.py  memcached.py  mongodb.py  pulsar.py  rabbitmq.py  redis.py  rocketmq.py  sqs.py
src/scrapy_extension/spider/: __init__.py  spider_mixin.py
src/scrapy_extension/storage/: __init__.py
src/scrapy_extension/storage/strategies/: __init__.py  base.py  batched.py  factory.py  passthrough.py
src/scrapy_extension/utils/: __init__.py  _config.py  request.py
src/scrapy_redis/: README.md  pyproject.toml
src/scrapy_redis/src/scrapy_redis/: __init__.py
tests/: __init__.py  _scrapy_engine_probe.py  conftest.py  test_backend_config_adapter.py  test_backend_coverage2.py  test_backend_modes.py  test_backend_settings_contracts.py  test_backends.py  test_bench_push_pop.py  test_bench_serialization.py  test_bloom_filter.py  test_bound_ack_token.py  test_ci_coverage_regressions.py  test_circuit_breaker.py  test_component_settings_fail_fast.py  test_components.py  test_config.py  test_connection_manager.py  test_connection_manager_coverage.py  test_connectors.py  test_coverage_final.py  test_cuckoo_filter.py  test_dedupe_factory.py  test_delay_strategy.py  test_dupefilter.py  test_dupefilter_monitor_safety.py  test_dynamodb_backend.py  test_dynamodb_batch_clear.py  test_dynamodb_clear_storage_lock.py  test_dynamodb_coverage.py  test_dynamodb_generation.py  test_dynamodb_resilience.py  test_elasticsearch_backend.py  test_elasticsearch_backend_coverage.py  test_elasticsearch_connect_cleanup.py  test_elasticsearch_resilience.py  test_factory_manager_release.py  test_filter_properties.py  test_get_breaker_lock_scope.py  test_kafka_backend.py  (+73 more)
tests/integration/: bench_es_push_refresh.py  docker-compose.yml  rmq-proxy.json  rocketmq-broker.conf  test_dynamodb_integration.py  test_elasticsearch_integration.py  test_es_perf_regression.py  test_kafka_integration.py  test_memcached_integration.py  test_mongodb_integration.py  test_multi_backend_e2e.py  test_pulsar_integration.py  test_rabbitmq_integration.py  test_redis_integration.py  test_rocketmq_integration.py  test_sqs_integration.py
tests/typecheck/: public_api.py
