[build-system]
requires = ["uv_build>=0.10.4,<0.12"]
build-backend = "uv_build"

[project]
name = "scrapy-extension"
version = "0.1.0"
description = "Distributed crawling for Scrapy with pluggable backends — Redis, MongoDB, Kafka, RabbitMQ, ElasticSearch, RocketMQ."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "azwpayne", email = "paynewu0719@gmail.com" }]
requires-python = ">=3.10"
keywords = ["scrapy", "crawler", "distributed", "redis", "mongodb", "kafka", "rabbitmq", "elasticsearch", "rocketmq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings>=2.13.1,<3",
    "scrapy>=2.14.2,<3",
]

[project.urls]
Homepage = "https://github.com/azwpayne/scrapy-extension"
Repository = "https://github.com/azwpayne/scrapy-extension"
Issues = "https://github.com/azwpayne/scrapy-extension/issues"
Changelog = "https://github.com/azwpayne/scrapy-extension/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# NOTE: Backends use PEP 562 lazy imports — deps are loaded on demand.
redis = ["redis>=7.3.0,<9"]
mongodb = ["pymongo>=4.8.0,<5"]
kafka = ["kafka-python-ng>=2.2.2,<3"]
rabbitmq = ["pika>=1.3.2,<2"]
elasticsearch = ["elasticsearch>=8.12.0,<9"]
rocketmq = ["rocketmq-python-client>=5.1.1,<6"]
pulsar = ["pulsar-client>=2.11.0,<4"]
# Experimental — supply-chain caveat: pymemcache is unmaintained (last release
# 2022-10-17, ~1300+ days stale). The `memcached` extra is storage-only (KV+TTL).
# See STABILITY.md "Memcached" row for status; tracked as U20.
memcached = ["pymemcache>=4.0,<5"]
sqs = ["boto3>=1.34,<2"]
dynamodb = ["boto3>=1.34,<2"]
all = [
    "redis>=7.3.0,<9",
    "pymongo>=4.8.0,<5",
    "kafka-python-ng>=2.2.2,<3",
    "pika>=1.3.2,<2",
    "elasticsearch>=8.12.0,<9",
    "rocketmq-python-client>=5.1.1,<6",
    "pulsar-client>=2.11.0,<4",
    "pymemcache>=4.0,<5",
    "boto3>=1.34,<2",
]

[dependency-groups]
dev = [
    "poethepoet",
    "pytest-benchmark>=5.2.3",
    "ruff",
]
test = [
    "pytest",
    "pytest-xdist[psutil]",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-mock",
    "pytest-cov",
    "coverage[toml]",
    "pytest-sugar",
    "pytest-instafail",
    "pytest-socket",
    "pytest-mypy",
    "pytest-ruff",
    "pytest-bandit",
    "hypothesis>=6,<7",
    # Backend deps — tests import backend modules directly, which triggers
    # the module-level lazy-import guard. All backends must be installable
    # for the test suite to collect.
    "redis>=7.3.0,<9",
    "pymongo>=4.8.0,<5",
    "kafka-python-ng>=2.2.2,<3",
    "pika>=1.3.2,<2",
    "elasticsearch>=8.12.0,<9",
    # apache rocketmq-python-client is pure-Python (gRPC + protobuf, no native
    # lib) — installable in the test env without the librocketmq pain that
    # blocked the old ctypes client. Required so the lazy-import guard in
    # backends/rocketmq.py lets module collection succeed.
    "rocketmq-python-client>=5.1.1,<6",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.poe]
executor.type = "uv"
tasks.full = ["clean", "format"]
tasks.test = [
    "clean",
    "test-py310",
    "test-py311",
    "test-py312",
    "test-py313",
    "test-py314",
    "test-py314t"
]

tasks.format = "ruff format"
tasks.lint = "ruff check --fix --unsafe-fixes"

tasks.test-py310 = { shell = "uv run --python 3.10 --group test pytest" }
tasks.test-py311 = { shell = "uv run --python 3.11 --group test pytest" }
tasks.test-py312 = { shell = "uv run --python 3.12 --group test pytest" }
tasks.test-py313 = { shell = "uv run --python 3.13 --group test pytest" }
tasks.test-py314 = { shell = "uv run --python 3.14 --group test pytest" }
# Free-threaded build. NOTE: lxml (pulled transitively by scrapy via parsel)
# re-enables the GIL on import, so this verifies 3.14t interpreter-compat —
# NOT GIL-free concurrency. True free-threading can't be exercised while
# scrapy depends on lxml (R81).
tasks.test-py314t = { shell = "uv run --python 3.14t --group test pytest" }

tasks.clean = { shell = """
	rm -rf .pytest_cache htmlcov .coverage coverage.xml .ruff_cache .benchmarks reports
	find . -type d -name __pycache__ -exec rm -rf {} +
	find . -type f -name "*.pyc" -delete
""" }

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
exclude = ["examples"]

[tool.ruff.lint]
select = [
    "B",
    "F",
    "I",
    "RUF",
    "UP",
]
ignore = [
    "B009",
    "B904",
    "RUF043",
    "RUF059",
    "RUF100",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F811",
    "F841",
    "RUF012",
]

[tool.pytest.ini_options]
minversion = "8.0"
python_files = ["test_*.py", "*_test.py", "testing.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "it_*", "its_*", "check_*"]
pythonpath = ["src", "."]
testpaths = ["tests", "src"]
addopts = [
    "-v",
    "--tb=short",
]
filterwarnings = [
    #    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
    "error::UserWarning", # 将警告视为错误
    "ignore::DeprecationWarning:pkg_resources.*",
]
markers = [
    "unit: 纯单元测试（无IO，<10ms）",
    "integration: 集成测试（含数据库/HTTP）",
    "e2e: 端到端测试（完整用户流程）",
    "slow: 执行时间>1s的测试",
    "flaky: 已知不稳定的测试（需重试）",
    "security: 安全相关测试",
    "mutation: 变异测试筛选",
    "benchmark: 性能基准测试",
    "snapshot: 快照测试",
    "property: Hypothesis属性测试",
]
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/migrations/*",
    "*/venv/*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage"
title = "Coverage Report"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # 跳过assert检查（pytest使用大量assert）

[tool.mypy]
# U8 — mypy --strict clean (py.typed public promise).
# Strict mode is on; per-module overrides below relax only the genuinely
# untyped third-party surfaces (redis-py's Sentinel/ClusterNode factories,
# the kafka-python / pika / pymemcache clients which ship no inline stubs).
strict = true
warn_unused_configs = true
warn_redundant_casts = true
follow_imports = "normal"
ignore_missing_imports = true
show_error_codes = true
pretty = true

# Third-party libs that ship no py.typed marker / no inline annotations.
# Calls into these would otherwise force `# type: ignore` sprinkles across
# every backend; the override keeps the call-sites strict-clean while we
# still type everything we own. Stubs-only — does NOT weaken first-party code.
[[tool.mypy.overrides]]
module = [
  "redis",
  "redis.*",
  "kafka.*",
  "pika.*",
  "pymemcache.*",
  "rocketmq.*",
  "pulsar.*",
]
disallow_untyped_calls = false

[tool.pytest-watcher]
now = true
patterns = ["*.py", "*.toml"]
ignore_patterns = ["*.pyc", "__pycache__/*", "reports/*"]


[tool.pytest_benchmark]
min_rounds = 5
min_time = 0.000005
max_time = 1.0
calibration_precision = 10
warmup = true
warmup_iterations = 100000
