[project]
name = "scrapy-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "azwpayne", email = "paynewu0719@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
